# artnow-test

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.config/: nextest.toml
src/: lib.rs
src/components/: cart_item.rs  gallery_item.rs  mod.rs
src/pages/: cart.rs  categories.rs  favorites.rs  gallery.rs  index.rs  item.rs  mod.rs
tests/: tests.rs
