[package]
name = "artnow-test"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
thirtyfour = "0.35.0"
anyhow = "1.0.96"
paste = "1.0.15"
derive_more = { version = "2.0.1", features = ["display"] }
futures = "0.3.31"

[profile.release]
debug = true
